force-app/main/default/objects/Utility_File_Account_Association__c/Utility_File_Account_Association__c.object-meta.xml
<CustomObject>
    <description>Association between Utility Accounts and Utility Statements</description>
    <label>Utility File Account Association</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Utility File Account Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utility File Account Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>