force-app/main/default/objects/Utility_File_Account_Association__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>Unique id field used for Duplicate Check</description>
    <label>Unique ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>