force-app/main/default/objects/Utility_File_Account_Association__c/fields/Utility_Account__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account__c</fullName>
    <description>Utility Account</description>
    <label>Utility Account</label>
    <referenceTo>UtilityAccount__c</referenceTo>
    <relationshipLabel>Utility File Account Associations</relationshipLabel>
    <relationshipName>Utility_File_Account_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>