force-app/main/default/objects/Utility_File_Account_Association__c/fields/Utility_Statement_File__c.field-meta.xml
<CustomField>
    <fullName>Utility_Statement_File__c</fullName>
    <description>Utilty Statement File</description>
    <label>Utility Statement File</label>
    <referenceTo>UtilityStatementFile__c</referenceTo>
    <relationshipLabel>Utility File Account Associations</relationshipLabel>
    <relationshipName>Utility_File_Account_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>