force-app/main/default/objects/Utility_File_Account_Association__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Utility_Account__c</columns>
    <columns>Utility_Statement_File__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>